--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=a1e19e6b99f9617dc3ff",
+    "/css/app.css": "/css/app.css?id=2db58f27a5e3dc08d3ae"
 }
